Fixed the position of "Jump to Top" button.

--- a/style.css
+++ b/style.css
@@ -94,8 +94,9 @@ code {
 
 #jump {
     position: fixed;
-    top: 90%;
-    left: 90%;
+    bottom: 0px;
+    right: 0px;
+    margin: 20px;
     padding: 10px;
     text-align: center;
     background-color: rgb(66, 66, 163);
